# crypto-portfolio-agno

./: .env.example  ARQUITETURA_AGENTES_IA_PORTFOLIO.md  DECISOES_CONVERSA_02FEV2026.md  README_ATUALIZACOES.txt  VERIFICACAO_FINAL_02FEV2026.md  config.yaml  main.py  pyproject.toml
.github/: copilot-instructions.md
app/agents/: crypto_expert.py  meta_learning_optimizer.py
crypto-portfolio-agno/app/: __init__.py  config.py
